2014-08-31  Ethan A Merritt  <merritt@u.washington.edu>

	* src/stats.c docs/gnuplot.doc:  Calculate and report sample standard
	deviation (STATS_ssd) as well as the population standard deviation 
	(STATS_stddev).  Provide formulae for the reported quantities in the
	LaTeX documentation, and document the difference between
	_ssd and _stddev in all documentation formats.

2014-08-30  Petr Mikulik  <mikulik@physics.muni.cz>

	* config/config.os2: Use _strtoll.

2014-08-29  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/gplt_x11.c (exec_cmd process_configure_notify_event):
	Add missing #ifdefs: USE_X11_MULTIBYTE and PIPE_IPC.

2014-08-21  Ethan A Merritt  <merritt@u.washington.edu>

	* src/fit.c:  Handle columnheaders in input to "fit".
	Bug #1467

	* src/misc.c (lp_parse):  Flag "set object N lt <lt>" as an error,
	since currently this must be done be "set object N fs bo <lt>".
	Probably we should figure out how to make this command work, but
	better to issue an error than accept it and then ignore it.
	Bug #1460

	* src/bf_test.c:  Use HAVE_STDLIB_H and HAVE_MALLOC_H to include proper
	header file for calloc().  "Jun T." <takimoto-j@kba.biglobe.ne.jp>.

2014-08-21  Ethan A Merritt  <merritt@u.washington.edu>

	* Branchpoint for 5.0 (cvs tag -b branch-5-0-stable)

	The main (development) branch is now marked 5.1 and will eventually
	be used as the basis for a future release named gnuplot version 5.2.

				>>> NOTE <<<

	Starting now 
	============

	* Bugfixes for version 5 should be applied to both the main branch
	(5.1 == this one) and the stable branch (branch-5-0-stable).
	They will first appear in patchlevel releases 5.0.1, 5.0.2, and so on.

	* Major new features and experimental changes belong here, not in the
	stable branch.  They will appear eventually in release 5.2.

	* Minor new features can go in both branches at your discretion, but
	remember that the stable branch should ideally never break.